# Sorting-Visualization

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/: db.sqlite3
src/base/: celery.py  settings.py  urls.py
src/static/js/: visualization.js
src/static/styles/: style.css
src/templates/: main.html
src/viz/: admin.py  methods.py  models.py  sort.py  sortMethodHandler.py  tasks.py  urls.py  views.py
src/viz/migrations/: 0001_initial.py  0002_values_delete_person.py  0003_remove_values_values_values_valuelist.py
src/viz/templates/viz/: algorithm.html  bubble.html  insert.html  merge.html  quick.html  radix.html  selection.html  startPage.html  testing.html
